somewhat fixed bootstrap layout, however columns overlap

--- a/static/drawboard.css
+++ b/static/drawboard.css
@@ -81,6 +81,18 @@
     padding: 0px;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+li {
+  line-height: 40px;
+  white-space: nowrap;
+  height: 40px;
+}
+
 /* Login Modal taken and modified from http://bootsnipp.com/snippets/featured/clean-modal-login-form */
 
 /****** LOGIN MODAL ******/
